[gd_scene load_steps=11 format=2]

[ext_resource path="res://popochiu/GraphicInterface/Popups/Terminal/Doom_1.666_shareware_ENDOOM.png" type="Texture" id=1]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Terminal/DungeonGen.gd" type="Script" id=2]
[ext_resource path="res://popochiu/Common/fonts/awe_mono.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resident_dungeon/DungeonGenerator.tscn" type="PackedScene" id=4]
[ext_resource path="res://resident_dungeon/models/DungeonResource.gd" type="Script" id=5]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Terminal/DungeonDecoratorBasic.gd" type="Script" id=6]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Terminal/backgroun.png" type="Texture" id=7]

[sub_resource type="TileSet" id=1]
0/name = "Doom_1.666_shareware_ENDOOM.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 48, 1, 5, 5 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Resource" id=3]
script = ExtResource( 5 )
_seed = 46
_width = 17
_height = 12
_max_initial_room_width = 4
_max_initial_room_height = 4
_merge_grid_chance = 1.0
_min_number_rooms = 4
_max_number_rooms = 28
_random_merge = false
_select_room_chance = 0.25
_merge_room_chance = 0.2
_max_deep = 6
_survival_door_chance = 0.0
_start_position = Vector2( 7, 11 )
_exit = 1
_boss_code = "AD"
_loot_contents = [  ]
_special_items = [ "", "" ]
_terminal_code = "A"
_safe_rooms = 1
_survivor_code = "leon"
_locked_rooms = 1
_dark_rooms = [ 8 ]
_lock_dark_paths = true

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 3 )

[node name="DungeonGen" type="Node2D"]
script = ExtResource( 2 )

[node name="Backgroun" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( -9, 4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
visible = false
modulate = Color( 0.207843, 0.278431, 0.168627, 1 )
tile_set = SubResource( 1 )
cell_size = Vector2( 5, 5 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 393219, 0, 0, 393220, 0, 0 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = 28.0
margin_right = -160.0
margin_bottom = 28.0

[node name="Generate" type="Button" parent="Control"]
margin_left = 174.0
margin_top = 10.0
margin_right = 219.0
margin_bottom = 28.0
text = "gen 1"

[node name="Generate2" type="Button" parent="Control"]
margin_left = 224.0
margin_top = 10.0
margin_right = 269.0
margin_bottom = 28.0
text = "gen 2"

[node name="Generate3" type="Button" parent="Control"]
margin_left = 273.0
margin_top = 10.0
margin_right = 318.0
margin_bottom = 28.0
text = "gen 3"

[node name="Generate4" type="Button" parent="Control"]
margin_left = 174.0
margin_top = 32.0
margin_right = 219.0
margin_bottom = 50.0
text = "test"

[node name="Merge" type="Button" parent="Control"]
margin_left = 227.0
margin_top = 32.0
margin_right = 267.0
margin_bottom = 50.0
text = "step"

[node name="Tree" type="Button" parent="Control"]
margin_left = 276.0
margin_top = 32.0
margin_right = 316.0
margin_bottom = 50.0
text = "tree"

[node name="DungeonGenerator" parent="." instance=ExtResource( 4 )]
dungeon_config = SubResource( 3 )

[node name="DungeonDecoratorBasic" type="Node2D" parent="."]
script = ExtResource( 6 )
color_hidden_room = Color( 0.160784, 0.133333, 0.133333, 0.737255 )

[node name="Canvas" type="Node2D" parent="DungeonDecoratorBasic"]
position = Vector2( -120, -75 )

[node name="RichTextLabel" type="RichTextLabel" parent="DungeonDecoratorBasic"]
visible = false
margin_left = -146.0
margin_top = -80.0
margin_right = 12.0
margin_bottom = 77.0
mouse_filter = 2
custom_fonts/mono_font = SubResource( 2 )
bbcode_enabled = true
scroll_active = false
